# Epitech-Arcade

./: .gitignore  CMakeLists.txt  README.md  tests.sh
src/: keys.hpp
src/cores/: Core.cpp  Core.hpp  main.cpp
src/cores/DirManager/: DirManager.cpp  DirManager.hpp
src/cores/errors/: error.cpp  error.hpp
src/cores/launcher/: launcher.cpp  launcher.hpp
src/cores/libloader/: libloader.cpp  libloader.hpp
src/cores/parsing/: parsingErrors.cpp  parsingErrors.hpp
src/games/: IGames.hpp
src/games/nibbler/: Nibbler.cpp  Nibbler.hpp
src/games/pacman/: AIPacman.cpp  AIPacman.hpp  Pacman.cpp  Pacman.hpp
src/games/snake/: snake.cpp  snake.hpp
src/lib/: IGraphics.hpp
src/lib/NCurses/: Ncurse.cpp  Ncurse.hpp
src/lib/SDL2/: SDL.cpp  SDL.hpp
src/lib/SFML/: SFML.cpp  SFML.hpp
tests/: copy_main.cpp  testReturns0WhenValidFile.cpp  testReturns84WhenArgcNot2.cpp  testReturns84WhenFileNotFound.cpp  testReturns84WhenInvalidFile.cpp
